# jodit_html_editor

./: .gitignore  pyproject.toml
jodit_html_editor/: hooks.py
jodit_html_editor/public/css/: jodit_html_editor.bundle.less
jodit_html_editor/public/js/: jodit_html_editor.bundle.js
