[project]
name = "jodit_html_editor"
authors = [
    { name = "GreyCube Technologies", email = "admin@greycube.in"}
]
description = "Replace Quill Text Editor With Jodit HTML Editor on WebPage and WebForm"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
